cpu features to export set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -539,7 +539,7 @@ if (BUILD_CLI)
 endif()
 
 install(
-  TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets
+  TARGETS ${PROJECT_NAME} cpu_features EXPORT ${PROJECT_NAME}Targets
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
